--- a/contact.html
+++ b/contact.html
@@ -10984,7 +10984,7 @@
                                           required=""
                                           aria-required="true"
                                           aria-checked="false"
-                                          name="comp-k9s7zfl7"
+                                          name="service_1"
                                           value="In-Home Therapy" /><span
                                           class="LPwNQx wixui-checkbox__input"
                                         ></span>
@@ -11027,7 +11027,7 @@
                                           required=""
                                           aria-required="true"
                                           aria-checked="false"
-                                          name="comp-k9s7zfl7"
+                                          name="service_2"
                                           value="Telehealth/Telerehab" /><span
                                           class="LPwNQx wixui-checkbox__input"
                                         ></span>
@@ -11070,7 +11070,7 @@
                                           required=""
                                           aria-required="true"
                                           aria-checked="false"
-                                          name="comp-k9s7zfl7"
+                                          name="service_3"
                                           value="Wound Care" /><span
                                           class="LPwNQx wixui-checkbox__input"
                                         ></span>
