--- a/contact.html
+++ b/contact.html
@@ -10981,7 +10981,6 @@
                                           data-testid="input"
                                           type="checkbox"
                                           class="cCdhN7"
-                                          required=""
                                           aria-required="true"
                                           aria-checked="false"
                                           name="service_1"
@@ -11024,7 +11023,6 @@
                                           data-testid="input"
                                           type="checkbox"
                                           class="cCdhN7"
-                                          required=""
                                           aria-required="true"
                                           aria-checked="false"
                                           name="service_2"
@@ -11067,7 +11065,6 @@
                                           data-testid="input"
                                           type="checkbox"
                                           class="cCdhN7"
-                                          required=""
                                           aria-required="true"
                                           aria-checked="false"
                                           name="service_3"
@@ -11119,6 +11116,8 @@
                                     class="rEindN has-custom-focus wixui-text-box__input"
                                     placeholder="Type your message here"
                                     aria-required="false"
+                                    value=""
+                                    name="message"
                                   ></textarea>
                                 </div>
                                 <div
