--- a/contact.html
+++ b/contact.html
@@ -11278,7 +11278,7 @@
                             <a href="tel:07766 051 369">07766 051 369</a><br />
                             Email:
                             <a
-                              href="mailto:tatjana@stillnessacupuncture.co.uk"
+                              href="mailto:jn.rmtherapy@gmail.com"
                               target="_blank"
                               rel="noopener"
                               >jn.rmtherapy@gmail.com</a
@@ -11320,9 +11320,9 @@
                         <div class="fl-rich-text">
                           <p>
                             <span style="font-size: 14px"
-                              >Copyright © 2023 | Re Move Therapy</span
-                            >
-                            |
+                              >Copyright © 2023 | Re Move Therapy |
+                            </span>
+
                             <a
                               href="https://jvchamroeun.github.io/"
                               target="_blank"
