--- a/contact.html
+++ b/contact.html
@@ -4397,27 +4397,7 @@
         height: auto !important;
       }
     </style>
-    <title>In-home physiotherapy and rehabilitation for seniors</title>
-    <meta name="description" content="Booking with us is easy." />
-    <link rel="canonical" href="https://www.myhomerehab.ca/booking" />
-    <meta
-      property="og:title"
-      content="In-home physiotherapy and rehabilitation for seniors"
-    />
-    <meta property="og:description" content="Booking with us is easy." />
-    <meta property="og:url" content="https://www.myhomerehab.ca/booking" />
-    <meta property="og:site_name" content="My Home Rehab, Inc" />
-    <meta property="og:type" content="website" />
-    <meta
-      name="google-site-verification"
-      content="jMB8bo6zXxI0qUcOk56-GJFhRuPcgzJfr8iEAqJAsJs"
-    />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="In-home physiotherapy and rehabilitation for seniors"
-    />
-    <meta name="twitter:description" content="Booking with us is easy." />
+    <title>Contact | Re Move Therapy</title>
 
     <style>
       img.wp-smiley,
@@ -8451,16 +8431,7 @@
       rel="shortlink"
       href="https://www.stillnessacupuncture.co.uk/?p=834"
     />
-    <link
-      rel="alternate"
-      type="application/json+oembed"
-      href="https://www.stillnessacupuncture.co.uk/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fwww.stillnessacupuncture.co.uk%2Fcontact%2F"
-    />
-    <link
-      rel="alternate"
-      type="text/xml+oembed"
-      href="https://www.stillnessacupuncture.co.uk/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fwww.stillnessacupuncture.co.uk%2Fcontact%2F&#038;format=xml"
-    />
+
     <style>
       .recentcomments a {
         display: inline !important;
